frontend/test/should_fail/empty_001.grg
rule empty_1 {
	pattern {
		;
	}
	replace {
		;
	}
}

